// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Atoms | Separator Separator default 1`] = `
<div
  className="Separatorstories__StyledContainer-sc-12j0h8a-0 boIgdX"
>
  <div
    className="Separator__StyledSeparator-a5vdsz-0 kXyqdV"
  />
</div>
`;

exports[`Storyshots Atoms | Separator Separator vertical 1`] = `
<div
  className="Separatorstories__StyledContainer-sc-12j0h8a-0 boIgdX"
>
  <div
    className="Separator__StyledSeparator-a5vdsz-0 fDbCeB"
  />
</div>
`;

exports[`Storyshots Atoms | Separator Separators with different color 1`] = `
<div
  className="Separatorstories__StyledContainer-sc-12j0h8a-0 boIgdX"
>
  <div
    className="Separator__StyledSeparator-a5vdsz-0 hoLprA"
  />
  <br />
  <div
    className="Separator__StyledSeparator-a5vdsz-0 iZkLdR"
  />
</div>
`;
